<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/commo_padding_min"
    android:id="@+id/layout_item_news"
    android:background="@color/purple_200"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_news"
            android:layout_width="@dimen/marginTop_image"
            android:layout_height="@dimen/marginTop_image"
            android:layout_marginStart="@dimen/commo_padding_min"
            android:contentDescription="@string/description_img"
            android:src="@drawable/playa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/separator"/>

        <TextView
            android:id="@+id/tv_title_News"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="@dimen/marginTop_login"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/commo_padding_min"
            android:layout_marginStart="@dimen/commo_padding_middle"
            android:lines="1"
            android:text="@string/name_news"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_news" />

        <TextView
            android:id="@+id/tv_description_news"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/commo_padding_middle"
            android:layout_marginTop="@dimen/commo_padding_min"
            android:gravity="left"
            android:maxLines="1"
            android:text="@string/author"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_news"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_News"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple"
            android:layout_marginTop="@dimen/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_news"
            />

        <TextView
            android:id="@+id/tv_Compartir"
            android:text="@string/link_Compartir"
            android:textColor="@color/text_color_reg"
            android:layout_marginTop="10dp"
            android:elevation="@dimen/commo_padding_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/commo_padding_middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
                />

</androidx.constraintlayout.widget.ConstraintLayout>