<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/commo_padding_min"
    android:background="@color/purple_200"
    tools:context=".views.news.AddNewsFragment">

    <TextView
        android:id="@+id/tvcerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/closed"
        android:textColor="@color/text_color_reg"
        android:layout_marginStart="@dimen/commo_padding_min"
        android:layout_marginTop="@dimen/commo_padding_min"
        android:layout_marginBottom="@dimen/commo_padding_default"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <TextView
        android:id="@+id/tv_textImg"
        android:text="@string/AddNew"
        android:textSize="@dimen/text_Size_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commo_padding_default"
        android:layout_marginStart="@dimen/commo_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvcerrar"
        />

    <ImageView
        android:id="@+id/iv_addImg"
        android:layout_width="@dimen/height_login"
        android:layout_height="@dimen/height_login"
        android:src="@drawable/ic_camera"
        android:layout_marginTop="@dimen/commo_padding_default"
        app:layout_constraintStart_toEndOf="@+id/tv_textImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvcerrar"
        />

    <ImageView
        android:id="@+id/iv_imageNew"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_news_height"
        android:src="@drawable/ic_image"
        android:layout_marginStart="@dimen/commo_padding_middle"
        android:layout_marginEnd="@dimen/commo_padding_middle"
        android:layout_marginTop="@dimen/height_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_textImg"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tiet_title"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="wrap_content"
        android:hint="@string/name_news"
        android:layout_marginStart="@dimen/commo_padding_min"
        android:layout_marginEnd="@dimen/commo_padding_min"
        android:layout_marginTop="@dimen/commo_padding_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_imageNew"
        />

    <EditText
        android:id="@+id/tiet_new"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:hint="@string/description_news"
        android:ems="@integer/recipebook_line_max"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:background="@color/white"
        android:layout_marginStart="@dimen/commo_padding_min"
        android:layout_marginEnd="@dimen/commo_padding_min"
        android:layout_marginBottom="@dimen/commo_padding_middle"
        android:layout_marginTop="@dimen/commo_padding_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiet_title"
        />

    <Button
        android:id="@+id/btn_save"
        android:text="@string/text_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/commo_padding_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />




</androidx.constraintlayout.widget.ConstraintLayout>