<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/commo_padding_min"
    android:background="@color/purple_200">

    <TextView
        android:id="@+id/regresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_Regresar"
        android:textColor="@color/text_color_reg"
        android:layout_marginStart="@dimen/commo_padding_min"
        android:layout_marginTop="@dimen/commo_padding_min"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@id/tvtitle"
        android:textSize="@dimen/text_Size_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_userRegister"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/commo_padding_middle"
        app:layout_constraintTop_toBottomOf="@id/regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_firstName"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_login"
        android:hint="Firts Name:"
        android:text="Lilu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle"
        android:layout_marginTop="@dimen/height_login"
        android:layout_marginStart="@dimen/commo_padding_min"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_lastName"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_login"
        android:hint="Last Name:"
        android:text="Chao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_firstName"
        android:layout_marginTop="@dimen/marginTop_ItemRB"
        android:layout_marginStart="@dimen/commo_padding_min"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_email"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_login"
        android:hint="Email:"
        android:text="Admin@admin.com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_lastName"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_pwd"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_login"
        android:hint="Password:"
        android:text="Password123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_repeat_pwd"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/height_login"
        android:hint="Repeat password:"
        android:text="Password123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_pwd"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/commo_padding_min"
        />

    <Button
        android:id="@+id/btnuserRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_Reg"
        android:layout_marginTop="@dimen/marginTop_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_repeat_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>